[gd_scene load_steps=10 format=2]

[ext_resource path="res://scene/ships/carrier/carrier.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/cursor/cursor.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ui/battle-scene/ui.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/mobile-camera/cameraPivot.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/terrain/terrain.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/cursor/cursor_5.png" type="Texture" id=6]
[ext_resource path="res://scene/battle-scene/battle_scene.gd" type="Script" id=7]

[sub_resource type="ProceduralSky" id=1]
ground_bottom_color = Color( 0.647059, 0.839216, 0.945098, 1 )
ground_horizon_color = Color( 0.85098, 0.85098, 0.85098, 1 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )

[node name="battle-scene" type="Node"]
script = ExtResource( 7 )

[node name="ui" parent="." instance=ExtResource( 3 )]

[node name="player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0 )

[node name="RemoteTransform" type="RemoteTransform" parent="player"]
remote_path = NodePath("../../Spatial")
update_rotation = false
update_scale = false

[node name="Spatial" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0 )

[node name="Sprite3D" type="Sprite3D" parent="Spatial"]
transform = Transform( 10, 0, 0, 0, -4.37114e-07, -10, 0, 10, -4.37114e-07, 0, -1, 0 )
opacity = 0.5
texture = ExtResource( 6 )

[node name="bot_holder" type="Node" parent="."]

[node name="instalation_holder" type="Node" parent="."]

[node name="enemy_decision_timer" type="Timer" parent="."]
autostart = true

[node name="enemy_spawning_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="cursor" parent="." instance=ExtResource( 2 )]
transform = Transform( 5, 0, 0, 0, -2.18557e-07, 1, 0, -5, -4.37114e-08, 0, 0, 0 )

[node name="terrain" parent="." instance=ExtResource( 5 )]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.5, 0.866025, 0, -0.866025, -0.5, 0, 20, -20 )
light_energy = 0.3
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="cameraPivot" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 0.573576, 0.819152, 0, -0.819152, 0.573576, 0, 10, 0.1 )

[connection signal="on_aim_press" from="ui" to="." method="_on_ui_on_aim_press"]
[connection signal="on_respawn_click" from="ui" to="." method="_on_ui_on_respawn_click"]
[connection signal="on_shot_press" from="ui" to="." method="_on_ui_on_shot_press"]
[connection signal="on_destroyed" from="player" to="ui" method="_on_player_on_destroyed"]
[connection signal="on_falling" from="player" to="." method="_on_player_on_falling"]
[connection signal="on_falling" from="player" to="ui" method="_on_player_on_falling"]
[connection signal="on_move" from="player" to="." method="_on_player_on_move"]
[connection signal="on_ready" from="player" to="ui" method="_on_player_on_ready"]
[connection signal="on_spawning_weapon" from="player" to="." method="_on_player_on_spawning_weapon"]
[connection signal="on_take_damage" from="player" to="ui" method="_on_player_on_take_damage"]
[connection signal="on_weapon_update" from="player" to="ui" method="_on_player_on_weapon_update"]
[connection signal="timeout" from="enemy_decision_timer" to="." method="_on_enemy_decision_timer_timeout"]
[connection signal="timeout" from="enemy_spawning_timer" to="." method="_on_enemy_spawning_timer_timeout"]
[connection signal="on_ground_clicked" from="terrain" to="." method="_on_terrain_on_ground_clicked"]
[connection signal="on_body_enter_aim_sight" from="cameraPivot" to="." method="_on_cameraPivot_on_body_enter_aim_sight"]
